<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyBluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_bluetooth">Hello Bluetooth!</string>
    <string name="hint_mac_address">BT\'s MAC</string>
    <string name="button_text_connect">Link</string>
    <string name="button_text_disconnect">Unlink</string>
    <string name="switch_text_led">LED state</string>

</resources>
