<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_bluetooth"
        android:id="@+id/textView"/>

    <Button
            android:id="@+id/button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_disconnect"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true"/>

    <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_connect"
            android:layout_alignTop="@+id/button_disconnect"
            android:layout_toLeftOf="@+id/button_disconnect"/>

    <EditText
            android:id="@+id/edit_text_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mac_address"
            android:layout_below="@+id/textView"
            android:layout_toLeftOf="@+id/button_connect"
            android:layout_alignBottom="@+id/button_connect"
            android:layout_alignLeft="@+id/textView"
            android:text="20:13:01:22:15:25"/>

    <CheckBox
            android:id="@+id/checkbox_led"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_text_led"
            android:layout_below="@+id/edit_text_mac"
            android:layout_alignLeft="@+id/edit_text_mac"
            android:layout_alignParentRight="true"/>

</RelativeLayout>
